# PirateRover

./: CMakeLists.txt  README.md  package.xml
devel/: .catkin  .rosinstall  setup.sh
devel/include/piraterover/: DriveCmd.h
devel/lib/pkgconfig/: piraterover.pc
devel/lib/python2.7/dist-packages/piraterover/msg/: _DriveCmd.py  __init__.py
devel/share/common-lisp/ros/piraterover/msg/: DriveCmd.lisp  _package.lisp  _package_DriveCmd.lisp  piraterover-msg.asd
devel/share/gennodejs/ros/piraterover/msg/: DriveCmd.js  _index.js
devel/share/piraterover/cmake/: piraterover-msg-extras.cmake  piraterover-msg-paths.cmake  pirateroverConfig.cmake
devel/share/roseus/ros/piraterover/: manifest.l
devel/share/roseus/ros/piraterover/msg/: DriveCmd.l
include/: .pimoronimotorcommander.py.swp
launch/: system.launch
msg/: FinalMotorCommands.msg
src/: motorcommander.py  underling_mk2.cpp
src/piraterover/: CMakeLists.txt
src/piraterover/msg/: DriveCmd.msg
src/piraterover/scripts/: MotorCommander.py
