<?xml version="1.0"?>
<package>
  <name>PirateRover</name>
  <version>0.0.1</version>
  <description>The rover! This package has all the ingredients for a mint Mars rover brain.</description>

  <maintainer email="thomas.123@live.com.au">DrNova</maintainer>
  <author email="thomas.123@live.com.au">DrNova</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
 
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
